kube/deploy/core/deployment-stellaris-core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stellaris-system

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stellaris-core-manager
  namespace: stellaris-system
  labels:
    app: stellaris-core-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stellaris-core-manager
  template:
    metadata:
      labels:
        app: stellaris-core-manager
    spec:
      serviceAccountName: stellaris-core-manager
      containers:
        - name: stellaris-core-manager
          image: sangshen/stellairis-core:v1.0.0
          imagePullPolicy: Always
          args:
            - --master=https://10.1.11.238:6443
            - --listen-port=8080
            - --health-probe-addr=:9001
            - --webhook-cert-dir=/etc/k8s-webhook-certs
            - --webhook-port=9443
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
            - containerPort: 8080
              name: grpc
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/k8s-webhook-certs
              name: webhook-certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: stellaris-webhook-cert
