kube/deploy/core/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stellaris-webhook-svc
  namespace: stellaris-system
  labels:
    app: stellaris-core-manager
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: grpc
  selector:
    app: stellaris-core-manager
